# 2025-08-11_basic-chat-patch

./: README.md  cartesia.toml  pyproject.toml
src/basic_chat_gemini/: chat_node.py  config.py  main.py  pyproject.toml
src/basic_chat_gemini/cartesia/: chat.py
src/basic_chat_gemini/cartesia/agents/: __init__.py  bridge.py  bus.py  call_request.py  events.py  harness.py  harness_types.py  routes.py  user_bridge.py  voice_agent_app.py  voice_agent_system.py
src/basic_chat_gemini/cartesia/agents/nodes/: __init__.py  base.py  conversation_context.py  reasoning.py
src/basic_chat_gemini/cartesia/agents/tools/: mcp_client.py  system_tools.py  threadsafe_mcp_client.py  tool_types.py
src/basic_chat_gemini/cartesia/agents/utils/: aio.py  func_utils.py  gemini_utils.py  openai_utils.py  print_utils.py  session_tracker.py  system_utils.py
